--- a/q1.html
+++ b/q1.html
@@ -1,11 +1,27 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <title>Question 1</title>
+        <title>Day 3 assignment</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script>
+            function findOddEven(){
+                var num = document.getElementById('num').value;
+                if ( num % 2 == 0) {
+                    document.getElementById('result')
+                    console.log(num + ' is an Even number');
+                }else{
+                    document.getElementById('result')
+                    console.log(num + ' is an odd number');
+                }
+            }        
+        </script>
     </head>
     <body>
-        <script>
-            let username = prompt("What is your name?");
-            console.log(username);
-        </script>
+        <h2>find Odd or Even number!</h2>
+        <div  id="result">
+            Enter a number:  <input type="number" id="num" name="num" min="0" /><input type="button" value="Find Odd or Even" onclick="findOddEven()" name="find" />
+            </div>
+        
     </body>
 </html>
