--- a/q1.html
+++ b/q1.html
@@ -3,22 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day4 assignment</title>
+    <title>Day 5 assignment</title>
 </head>
 <body>
     <script>
-       for(let i=1;i<=100;i++){
-if(i%3==0){
-    let a=console.log("fizz");
+        let n=Number(prompt("Enter a number:"));
+        if(Math.sign(n)!=1){
+alert("Please enter positive number");
+n=Number(prompt("Enter a number:"));
+        }
+       
+        var list = [];
+for (var i = 0; i < n; i++) {
+    list.push(i);
 }
-if(i%5==0){
-   let b= console.log("buzz");
-}
-if((i%3==0)&&(i%5==0)){
-    let c=console.log("fizzbuzz");
-}
-console.log(i);
-       }
+console.log(list)
+var odd=list.filter(el=>el%2!=0);
+console.log("Odd numbers are:"+odd);
+var cube=odd.map(function(el){
+    return el**3;
+})        
+console.log("Cube of odd numbers are:"+cube);
     </script>
 </body>
 </html>
