--- a/Q2.html
+++ b/Q2.html
@@ -1,16 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 3 assignment</title>
+<title>Day 6 assignment</title>
+
+<script language="javascript" type="text/javascript">
+
+
+function generateTable()
+{
+     var n = prompt("Enter a number: ");
+     var table= "";
+     for (i=1; i<=10; i++) {
+       table += n+ "  x  " +i+ "  =  " +(i*n)+"\n";
+     }
+    alert(table);
+    console.log(table);
+}
+
+generateTable();
+</script>
+
 </head>
 <body>
-    <script>
-        let os=prompt("Enter OS name:");
-        let version=prompt("Enter version:");
-    let res=os+" "+version;
-    console.log(res);
-    </script>
+
+<h1>MULTIPLICATION TABLE</h1>
+
+
 </body>
 </html>
